# fly

./: .bazelrc  .clang-format  .gitattributes  .gitignore  LICENSE  MODULE.bazel  README.md  assets.MODULE.bazel
core/: BUILD.bazel  arena.cpp  arena.h  assert.h  filesystem.cpp  filesystem.h  log.cpp  log.h  memory.h  memory_osx.cpp  platform.h  thread_context.cpp  types.h
demos/: BUILD.bazel
demos/atmosphere/: BUILD.bazel  aerial_perspective_lut.comp  atmosphere.frag  average_horizon_luminance.comp  common.glsl  irradiance_map.frag  main.cpp  multiscattering_lut.comp  project_skyview_radiance.comp  sample_cubemap.vert  screen_quad.frag  screen_quad.vert  skyview_lut.comp  terrain_scene.frag  transmittance_lut.comp
demos/clear_color/: BUILD.bazel  main.cpp
demos/common/: BUILD.bazel  bindless.glsl  scene.cpp  scene.h  simple_camera_fps.cpp  simple_camera_fps.h
demos/cubes/: BUILD.bazel  cubes.frag  cubes.vert  main.cpp
demos/dragons/: BUILD.bazel  brdf_integration_lut.comp  clear_draw_commands.comp  cull.comp  hzb_downsample.frag  lit.frag  lit.vert  main.cpp  main_cull.comp  occluder_cull.comp  prefilter.frag  prefilter.vert  skybox.frag  skybox.vert
demos/gaussian_splatting/: BUILD.bazel  copy.comp  cull.comp  main.cpp  radix_count.comp  radix_count_histogram.comp  radix_offset.comp  radix_scan.comp  radix_sort.comp  radix_sort_common.glsl  splat.frag  splat.vert  write_indirect_dispatch.comp
demos/gltf/: BUILD.bazel  main.cpp  unlit.frag  unlit.vert
demos/imgui/: BUILD.bazel  main.cpp
demos/import_obj/: BUILD.bazel  main.cpp  unlit.frag  unlit.vert
demos/indirect_draw/: BUILD.bazel  cull.comp  main.cpp  unlit.frag  unlit.vert
demos/irradiance_map/: BUILD.bazel  irradiance_sh.frag  irradiance_slow.frag  main.cpp  project_radiance_sh.comp  sample_cubemap.frag  sample_cubemap.vert
demos/lods/: BUILD.bazel  brdf_integration_lut.comp  cull.comp  lit.frag  lit.vert  main.cpp  prefilter.frag  prefilter.vert  prefix_sum.comp  radiance_projection.comp  remap.comp  skybox.frag  skybox.vert
demos/ocean/: BUILD.bazel  cascades.cpp  cascades.h  copy.comp  fft.comp  foam.frag  grayscale.comp  ifft.comp  initial_spectrum.comp  jonswap.comp  main.cpp  ocean.frag  ocean.vert  ocean_old.frag  ocean_old.vert  ocean_renderer.cpp  ocean_renderer.h  plane.frag  plane.vert  quad_tree.cpp  quad_tree.h  screen_quad.frag  screen_quad.vert  sky.frag  sky.vert  skybox.frag  skybox.vert  skybox_renderer.cpp  skybox_renderer.h  transpose.comp
demos/path_tracing/: BUILD.bazel  common.glsl  main.cpp  ray_generation.rgen  screen_quad.frag
demos/radix_sort/: BUILD.bazel  main.cpp  radix_count_histogram.comp  radix_scan.comp  radix_sort.comp
demos/ray_tracing/: BUILD.bazel  common.glsl  main.cpp  ray_closest_hit.rchit  ray_generation.rgen  ray_intersection.rint  ray_miss.rmiss  screen_quad.frag
demos/triangle/: BUILD.bazel  main.cpp  triangle.frag  triangle.vert
math/: BUILD.bazel  functions.cpp  functions.h  mat.cpp  (+2 more)
rhi/: BUILD.bazel  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  context.cpp  context.h  image.cpp  image.h  pipeline.cpp  pipeline.h  utils.cpp  utils.h
scripts/bazel/platform/: BUILD.bazel
scripts/python/: BUILD.bazel  copy_files.py  generate_ktx2_version.py  generate_wayland_protocol.py
src/assets/: BUILD.bazel  compress_image.cpp  cooker.cpp  export_image.cpp  export_image.h  image.h  image_bc.cpp  image_bc.h  import_gltf.cpp  import_gltf.h  import_image.cpp  import_image.h  import_obj.cpp  import_obj.h  import_spv.cpp  import_spv.h  transform_image.cpp  transform_image.h
src/assets/benchmark/: BUILD.bazel  benchmark_import_obj.cpp
src/assets/cooker/: BUILD.bazel  cooker.cpp
src/assets/geometry/: BUILD.bazel  cooker.cpp  geometry.cpp  geometry.h  mesh.cpp  mesh.h  vertex_layout.h
src/assets/image/: BUILD.bazel  compress_image.cpp  compress_image.h  cooker.cpp  dds_image.cpp  dds_image.h  eq2cube.frag  eq2cube.vert  export_image.cpp  export_image.h  image.h  import_image.cpp  import_image.h  transform_image.cpp  transform_image.h
src/assets/image/glsl/: BUILD.bazel
src/assets/scene/: BUILD.bazel  cooker.cpp  export_scene.cpp  export_scene.h  geometry.cpp  geometry.h  gltf_sg_to_rm_converter.cpp  mesh.h  scene.cpp  scene.h  scene_common.h  scene_data.cpp  scene_data.h  scene_header.h  scene_serialization_types.h  scene_storage.h
src/assets/tools/: BUILD.bazel  hex_dump.c
src/core/: BUILD.bazel  arena.cpp  arena.h  assert.cpp  assert.h  clock.cpp  clock.h  clock_linux.cpp  clock_osx.cpp  clock_windows.cpp  filesystem.cpp  filesystem.h  filesystem_linux.cpp  filesystem_unix.cpp  filesystem_windows.cpp  hash.cpp  hash.h  hash_set.h  hash_trie.h  list.h  log.cpp  log.h  memory.cpp  memory.h  memory_linux.cpp  memory_osx.cpp  memory_windows.cpp  platform.h  string8.cpp  string8.h  thread_context.cpp  thread_context.h  thread_context_linux.cpp  thread_context_unix.cpp  thread_context_windows.cpp  types.cpp  types.h
src/math/: BUILD.bazel  functions.cpp  functions.h  mat.cpp  mat.h  quat.cpp  quat.h  transform.cpp  transform.h  vec.h
src/math/benchmark/: BUILD.bazel  benchmark_functions.cpp
src/platform/: BUILD.bazel  window.cpp  window.h
src/rhi/: BUILD.bazel  acceleration_structure.cpp  acceleration_structure.h  allocation_callbacks.cpp  allocation_callbacks.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  commands.cpp  context.cpp  context.h  descriptor.cpp  descriptor.h  device.cpp  device.h  frame_graph.cpp  frame_graph.h  image.cpp  index_buffer.cpp  index_buffer.h  indirect_draw_buffer.cpp  indirect_draw_buffer.h  pipeline.cpp  pipeline.h  ray_tracing.cpp  ray_tracing.h  shader_program.cpp  shader_program.h  storage_buffer.cpp  storage_buffer.h  surface.cpp  surface.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  utils.cpp  utils.h  vma.h
src/utils/: BUILD.bazel  utils.cpp  utils.h
tests/core/: BUILD.bazel  test_filesystem.cpp  test_string8.cpp
tests/math/: BUILD.bazel  test_functions.cpp  test_mat4.cpp  test_quat.cpp  test_transform.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
(+17 files in other folders)
