module(name = "fly", version = "0.1")

bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "googletest", version = "1.16.0")

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.10",
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
)
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)

use_repo(pip, "pip")

external_git_repository = use_extension(
    "//scripts/bazel/extensions:external_git_repository.bzl",
    "external_git_repository",
)

external_archive = use_extension(
    "//scripts/bazel/extensions:external_archive.bzl",
    "external_archive",
)

external_git_repository.base(
    name = "glfw",
    build_file = "//scripts/bazel/target:BUILD.glfw.bazel",
    commit = "7b6aead9fb88b3623e3b3725ebb42670cbe4c579",
    remote = "https://github.com/glfw/glfw.git",
)
use_repo(external_git_repository, "glfw")

external_git_repository.base(
    name = "vulkan_headers",
    build_file = "//scripts/bazel/target:BUILD.vulkan_headers.bazel",
    commit = "39f924b810e561fd86b2558b6711ca68d4363f68",
    remote = "https://github.com/KhronosGroup/Vulkan-Headers.git",
)
use_repo(external_git_repository, "vulkan_headers")

external_git_repository.base(
    name = "spirv_headers",
    commit = "3f17b2af6784bfa2c5aa5dbb8e0e74a607dd8b3b",
    remote = "https://github.com/KhronosGroup/SPIRV-Headers.git",
)
use_repo(external_git_repository, "spirv_headers")

external_git_repository.base(
    name = "spirv_tools",
    commit = "4d2f0b40bfe290dea6c6904dafdf7fd8328ba346",
    remote = "https://github.com/KhronosGroup/SPIRV-Tools.git"
)
use_repo(external_git_repository, "spirv_tools")

external_git_repository.base(
    name = "spirv_cross",
    build_file = "//scripts/bazel/target:BUILD.spirv_cross.bazel",
    commit = "2c32b6bf86f3c4a5539aa1f0bacbd59fe61759cf",
    remote = "https://github.com/KhronosGroup/SPIRV-Cross.git",
)
use_repo(external_git_repository, "spirv_cross")

external_git_repository.base(
    name = "vulkan_utility_libraries",
    build_file = "//scripts/bazel/target:BUILD.vulkan_utility_libraries.bazel",
    commit = "5a88b6042edb8f03eefc8de73bd73a899989373f",
    remote = "https://github.com/KhronosGroup/Vulkan-Utility-Libraries.git",
)
use_repo(external_git_repository, "vulkan_utility_libraries")

external_git_repository.base(
    name = "vulkan_validation_layers",
    build_file = "//scripts/bazel/target:BUILD.vulkan_validation_layers.bazel",
    commit = "90851ef5b77757556217122061672dc52e21629c",
    remote = "https://github.com/KhronosGroup/Vulkan-ValidationLayers.git",
)
use_repo(external_git_repository, "vulkan_validation_layers")

external_git_repository.base(
    name = "volk",
    build_file = "//scripts/bazel/target:BUILD.volk.bazel",
    commit = "0b17a763ba5643e32da1b2152f8140461b3b7345",
    remote = "https://github.com/zeux/volk.git",
)
use_repo(external_git_repository, "volk")

external_git_repository.base(
    name = "vma",
    build_file = "//scripts/bazel/target:BUILD.vma.bazel",
    commit = "c788c52156f3ef7bc7ab769cb03c110a53ac8fcb",
    remote = "https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git",
)
use_repo(external_git_repository, "vma")

external_git_repository.base(
    name = "cereal",
    build_file = "//scripts/bazel/target:BUILD.cereal.bazel",
    commit = "ebef1e929807629befafbb2918ea1a08c7194554",
    remote = "https://github.com/USCiLab/cereal.git",
)
use_repo(external_git_repository, "cereal")

external_git_repository.base(
    name = "glslang",
    build_file = "//scripts/bazel/target:BUILD.glslang.bazel",
    commit = "1062752a891c95b2bfeed9e356562d88f9df84ac",
    remote = "https://github.com/KhronosGroup/glslang.git",
)
use_repo(external_git_repository, "glslang")

external_git_repository.base(
    name = "spirv_reflect",
    build_file = "//scripts/bazel/target:BUILD.spirv_reflect.bazel",
    commit = "281b55edb67b1f2e61e1dc92fdc42a650da05d83",
    remote = "https://github.com/KhronosGroup/SPIRV-Reflect.git",
)
use_repo(external_git_repository, "spirv_reflect")

external_git_repository.base(
    name = "mimalloc",
    build_file = "//scripts/bazel/target:BUILD.mimalloc.bazel",
    commit = "51c09e7b6a0ac5feeba998710f00c7dd7aa67bbf",
    remote = "https://github.com/microsoft/mimalloc.git",
)
use_repo(external_git_repository, "mimalloc")

external_git_repository.base(
    name = "stb",
    build_file = "//scripts/bazel/target:BUILD.stb.bazel",
    commit = "f0569113c93ad095470c54bf34a17b36646bbbb5",
    remote = "https://github.com/nothings/stb.git",
)
use_repo(external_git_repository, "stb")

external_archive.base(
    name = "xxhash",
    url = "https://github.com/Cyan4973/xxHash/archive/refs/tags/v0.8.3.zip",
    sha256 = "db2c12e6f05d45546d3581b6881b25090fd65ab5194891da0b2a1a9c49beda66",
    build_file = "//scripts/bazel/target:BUILD.xxhash.bazel",
)
use_repo(external_archive, "xxhash")

external_git_repository.base(
    name = "cgltf",
    build_file = "//scripts/bazel/target:BUILD.cgltf.bazel",
    commit = "08470a2b08980cd3221002a9b2ef29a37e3111dc",
    remote = "https://github.com/jkuhlmann/cgltf.git",
)
use_repo(external_git_repository, "cgltf")

external_git_repository.base(
    name = "imgui",
    build_file = "//scripts/bazel/target:BUILD.imgui.bazel",
    commit = "f5befd2d29e66809cd1110a152e375a7f1981f06",
    remote = "https://github.com/ocornut/imgui.git",
)
use_repo(external_git_repository, "imgui")

external_git_repository.base(
    name = "tinyobjloader",
    build_file = "//scripts/bazel/target:BUILD.tinyobjloader.bazel",
    commit = "3bb554cf74428d7db13418b4aca1b9752a1d2be8",
    remote = "https://github.com/tinyobjloader/tinyobjloader.git",
)
use_repo(external_git_repository, "tinyobjloader")

external_git_repository.base(
    name = "gltf_sample_models",
    build_file = "//scripts/bazel/target:BUILD.gltf_sample_models.bazel",
    commit = "d7a3cc8e51d7c573771ae77a57f16b0662a905c6",
    remote = "https://github.com/KhronosGroup/glTF-Sample-Models.git",
)
use_repo(external_git_repository, "gltf_sample_models")

external_git_repository.base(
    name = "splat_sample_scenes",
    build_file = "//scripts/bazel/target:BUILD.splat_sample_scenes.bazel",
    commit = "2c9796f59101d77d23f6eee53baa5018c9a6fcdc",
    remote = "https://huggingface.co/cakewalk/splat-data.git",
)
use_repo(external_git_repository, "splat_sample_scenes")

