module(name = "fly", version = "0.1")

bazel_dep(name = "apple_support", version = "1.23.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "googletest", version = "1.16.0")

include("//:assets.MODULE.bazel")

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.10",
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
)
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip")

external_git_repository = use_extension(
    "//scripts/bazel/extensions:external_git_repository.bzl",
    "external_git_repository",
)

external_archive = use_extension(
    "//scripts/bazel/extensions:external_archive.bzl",
    "external_archive",
)

################################################################
# VULKAN SDK
################################################################

external_git_repository.base(
    name = "vulkan_headers",
    build_file = "//scripts/bazel/target:BUILD.vulkan_headers.bazel",
    commit = "a4f8ada9f4f97c45b8c89c57997be9cebaae65d2",
    remote = "https://github.com/KhronosGroup/Vulkan-Headers.git",
)
use_repo(external_git_repository, "vulkan_headers")

external_git_repository.base(
    name = "spirv_headers",
    commit = "01e0577914a75a2569c846778c2f93aa8e6feddd",
    remote = "https://github.com/KhronosGroup/SPIRV-Headers.git",
)
use_repo(external_git_repository, "spirv_headers")

external_git_repository.base(
    name = "spirv_tools",
    commit = "7f2d9ee926f98fc77a3ed1e1e0f113b8c9c49458",
    remote = "https://github.com/KhronosGroup/SPIRV-Tools.git"
)
use_repo(external_git_repository, "spirv_tools")

external_git_repository.base(
    name = "spirv_cross",
    build_file = "//scripts/bazel/target:BUILD.spirv_cross.bazel",
    commit = "7affe74d77f93a622bb5002789d5332d32e512ee",
    remote = "https://github.com/KhronosGroup/SPIRV-Cross.git",
)
use_repo(external_git_repository, "spirv_cross")

external_git_repository.base(
    name = "vulkan_utility_libraries",
    build_file = "//scripts/bazel/target:BUILD.vulkan_utility_libraries.bazel",
    commit = "4322db5906e67b57ec9c327e6afe3d98ed893df7",
    remote = "https://github.com/KhronosGroup/Vulkan-Utility-Libraries.git",
)
use_repo(external_git_repository, "vulkan_utility_libraries")

external_git_repository.base(
    name = "vulkan_validation_layers",
    build_file = "//scripts/bazel/target:BUILD.vulkan_validation_layers.bazel",
    commit = "a1ff2dbc7e50828def8098c5ebf0fee10b714f85",
    remote = "https://github.com/KhronosGroup/Vulkan-ValidationLayers.git",
)
use_repo(external_git_repository, "vulkan_validation_layers")

external_git_repository.base(
    name = "volk",
    build_file = "//scripts/bazel/target:BUILD.volk.bazel",
    commit = "f30088b3f4160810b53e19258dd2f7395e5f0ba3",
    remote = "https://github.com/zeux/volk.git",
)
use_repo(external_git_repository, "volk")

external_git_repository.base(
    name = "vma",
    build_file = "//scripts/bazel/target:BUILD.vma.bazel",
    commit = "c788c52156f3ef7bc7ab769cb03c110a53ac8fcb",
    remote = "https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git",
)
use_repo(external_git_repository, "vma")

external_git_repository.base(
    name = "cereal",
    build_file = "//scripts/bazel/target:BUILD.cereal.bazel",
    commit = "ebef1e929807629befafbb2918ea1a08c7194554",
    remote = "https://github.com/USCiLab/cereal.git",
)
use_repo(external_git_repository, "cereal")

external_git_repository.base(
    name = "molten_vk",
    build_file = "//scripts/bazel/target:BUILD.molten_vk.bazel",
    commit = "49b97f26ae013b9e5bfb3098ee5dea5e4f58e9e8",
    remote = "https://github.com/KhronosGroup/MoltenVK.git",
)
use_repo(external_git_repository, "molten_vk")

external_git_repository.base(
    name = "glslang",
    build_file = "//scripts/bazel/target:BUILD.glslang.bazel",
    commit = "8e1494f9d742a27b54193ecd9475dcb2ef23b8b7",
    remote = "https://github.com/KhronosGroup/glslang.git",
)
use_repo(external_git_repository, "glslang")


################################################################
# DEPS
################################################################

external_git_repository.base(
    name = "glfw",
    build_file = "//scripts/bazel/target:BUILD.glfw.bazel",
    commit = "7b6aead9fb88b3623e3b3725ebb42670cbe4c579",
    remote = "https://github.com/glfw/glfw.git",
)
use_repo(external_git_repository, "glfw")

external_git_repository.base(
    name = "mimalloc",
    build_file = "//scripts/bazel/target:BUILD.mimalloc.bazel",
    commit = "51c09e7b6a0ac5feeba998710f00c7dd7aa67bbf",
    remote = "https://github.com/microsoft/mimalloc.git",
)
use_repo(external_git_repository, "mimalloc")

external_archive.base(
    name = "xxhash",
    url = "https://github.com/Cyan4973/xxHash/archive/refs/tags/v0.8.3.zip",
    sha256 = "db2c12e6f05d45546d3581b6881b25090fd65ab5194891da0b2a1a9c49beda66",
    build_file = "//scripts/bazel/target:BUILD.xxhash.bazel",
)
use_repo(external_archive, "xxhash")

external_git_repository.base(
    name = "cgltf",
    build_file = "//scripts/bazel/target:BUILD.cgltf.bazel",
    commit = "08470a2b08980cd3221002a9b2ef29a37e3111dc",
    remote = "https://github.com/jkuhlmann/cgltf.git",
)
use_repo(external_git_repository, "cgltf")

external_git_repository.base(
    name = "stb",
    build_file = "//scripts/bazel/target:BUILD.stb.bazel",
    commit = "fede005abaf93d9d7f3a679d1999b2db341b360f",
    remote = "https://github.com/nothings/stb.git",
)
use_repo(external_git_repository, "stb")

external_git_repository.base(
    name = "tinyexr",
    build_file = "//scripts/bazel/target:BUILD.tinyexr.bazel",
    commit = "cba4843738ff580723bee12e70740204b9560c21",
    remote = "https://github.com/syoyo/tinyexr.git",
)
use_repo(external_git_repository, "tinyexr")

external_git_repository.base(
    name = "imgui",
    build_file = "//scripts/bazel/target:BUILD.imgui.bazel",
    commit = "f5befd2d29e66809cd1110a152e375a7f1981f06",
    remote = "https://github.com/ocornut/imgui.git",
)
use_repo(external_git_repository, "imgui")

external_git_repository.base(
    name = "meshoptimizer",
    build_file = "//scripts/bazel/target:BUILD.meshoptimizer.bazel",
    commit = "f3d334664a89c707002748cb2507a3419e25a6c6",
    remote = "https://github.com/zeux/meshoptimizer.git",
)
use_repo(external_git_repository, "meshoptimizer")

external_git_repository.base(
    name = "fast_obj",
    build_file = "//scripts/bazel/target:BUILD.fast_obj.bazel",
    commit = "d620667f10a548dee94dbc8c144bb22f79162176",
    remote = "https://github.com/thisistherk/fast_obj.git",
)
use_repo(external_git_repository, "fast_obj")

################################################################
# MISC
################################################################

external_git_repository.base(
    name = "spirv_reflect",
    build_file = "//scripts/bazel/target:BUILD.spirv_reflect.bazel",
    commit = "281b55edb67b1f2e61e1dc92fdc42a650da05d83",
    remote = "https://github.com/KhronosGroup/SPIRV-Reflect.git",
)
use_repo(external_git_repository, "spirv_reflect")

external_git_repository.base(
    name = "tinyobjloader",
    build_file = "//scripts/bazel/target:BUILD.tinyobjloader.bazel",
    commit = "3bb554cf74428d7db13418b4aca1b9752a1d2be8",
    remote = "https://github.com/tinyobjloader/tinyobjloader.git",
)
use_repo(external_git_repository, "tinyobjloader")

