################################################################
# SCENES / DATA
################################################################

external_git_repository = use_extension(
    "//scripts/bazel/extensions:external_git_repository.bzl",
    "external_git_repository",
)

external_assets = use_extension(
    "//scripts/bazel/extensions:external_assets.bzl",
    "external_assets",
)

external_git_repository.base(
    name = "gltf_sample_models",
    build_file = "//scripts/bazel/target:BUILD.gltf_sample_models.bazel",
    commit = "d7a3cc8e51d7c573771ae77a57f16b0662a905c6",
    remote = "https://github.com/KhronosGroup/glTF-Sample-Models.git",
)
use_repo(external_git_repository, "gltf_sample_models")

external_git_repository.base(
    name = "splat_sample_scenes",
    build_file = "//scripts/bazel/target:BUILD.splat_sample_scenes.bazel",
    commit = "2c9796f59101d77d23f6eee53baa5018c9a6fcdc",
    remote = "https://huggingface.co/cakewalk/splat-data.git",
)
use_repo(external_git_repository, "splat_sample_scenes")

################################################################
# AMBIENTCG
################################################################

external_assets.base(
    name = "ambientcg",
    urls = [
        "https://acg-download.struffelproductions.com/file/ambientCG-Web/download/DaySkyHDRI051B_somO930g/DaySkyHDRI051B_4K-TONEMAPPED.jpg",
        "https://acg-download.struffelproductions.com/file/ambientCG-Web/download/DayEnvironmentHDRI052_lZgBC49u/DayEnvironmentHDRI052_4K-TONEMAPPED.jpg",
        "https://acg-download.struffelproductions.com/file/ambientCG-Web/download/IndoorEnvironmentHDRI016_BjdZMfsq/IndoorEnvironmentHDRI016_4K-TONEMAPPED.jpg",
        "https://acg-download.struffelproductions.com/file/ambientCG-Web/download/DayEnvironmentHDRI078_WoEcP6az/DayEnvironmentHDRI078_4K-TONEMAPPED.jpg",
        "https://ambientcg.com/get?file=NightEnvironmentHDRI009_4K-HDR.exr",
        "https://ambientcg.com/get?file=DayEnvironmentHDRI020_4K-HDR.exr",
        "https://ambientcg.com/get?file=DayEnvironmentHDRI014_4K-HDR.exr",
        "https://ambientcg.com/get?file=NightEnvironmentHDRI008_4K-HDR.exr",
    ],
    sha256 = [
        "3c809dd5d2a5ec97a4cd3b6fa9d9667472e866e99eb0b140dadb0758a0fd19b3",
        "e67cd622ee9efd17d26658cbfe096a21a1d471e3a487f226b0c50c3764a3e941",
        "bc794c96c855dd5b4a3ac2b0853f3efaec6cb76fa49de565c30b0e4bf6d3b83a",
        "c81652e3e43ff14e048c9a73f043c9b686a118af2bbcc6150b19e1131a3a2073",
        "d01c997f24d1ae93f67d62e1007d0c8c43d88d340265bd5741025e34f9ff7a17",
        "71d7e45486bf3f23e2ee97db64dc9415670564bdb792d2bdf3d5a3793a0cd11d",
        "4d52eb0e44ede513e5aa64fb02604ef82c12f6a60095cccd9c85ee50f47aa87c",
        "06a993a4e7d826066834bb4acdbf02958e51f6e29bf8461b8f97c5048dad8e70",
    ],
    build_file = "//scripts/bazel/target:BUILD.ambientcg.bazel",
)
use_repo(external_assets, "ambientcg")

################################################################
# PAUL DEBEVEC PROBE GALLERY
################################################################

external_assets.base(
    name = "debevec",
    urls = [
        "https://pauldebevec.com/Probes/new/grace_probe_latlong.hdr",
        "https://pauldebevec.com/Probes/new/rnl_probe_latlong.hdr",
        "https://pauldebevec.com/Probes/new/uffizi_probe_latlong.hdr",
    ],
    sha256 = [
        "64aaf9eb96bb4aa597cf52849fbb6724e51250d7fa03e4deebe941d66bae9643",
        "f73c80a429cc549278bc03e87456a42ff21747ff5ef232a91d5cf6346608b9d0",
        "fcaebaca7ec26a6eeb5631e65f9e43a469b2be0529ec760b6d8fad7277a31fd7",
    ],
    build_file = "//scripts/bazel/target:BUILD.debevec.bazel",
)
use_repo(external_assets, "debevec")