load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

copy_file(
    name = "copy_vulkan_layer_manifest",
    src = "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
    out = "VkLayer_khronos_validation.json",
)

copy_file(
    name = "copy_vulkan_layer",
    src = "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
    out = "VK_LAYER_KHRONOS_validation.dll",
)

config_setting(
    name = "release_build",
    values = {
        "compilation_mode": "opt",
    },
)

cc_binary(
    name = "clear_color",
    srcs = [
        "clear_color.cpp",
    ],
    deps = [
        "//rhi:context",
    ],
    data = select({
        ":release_build": [],
        "//conditions:default": [
            ":copy_vulkan_layer_manifest",
            ":copy_vulkan_layer",
        ],
    })
)

