load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "context",
    hdrs = [
        "context.h",
        "command_buffer.h",
        "pipeline.h",
    ],
    srcs = [
        "context.cpp",
        "command_buffer.cpp",
        "pipeline.cpp",
    ],
    deps = [
        "@volk//:volk",
        "@glfw//:glfw",
        "@vma//:vma",
        "//core:core",
    ],
    visibility = ["//visibility:public"],
)
