load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "context",
    hdrs = [
        "context.h",
        "command_buffer.h",
        "pipeline.h",
        "utils.h",
    ],
    srcs = [
        "context.cpp",
        "command_buffer.cpp",
        "pipeline.cpp",
        "utils.cpp",
    ],
    deps = [
        "@volk//:volk",
        "@glfw//:glfw",
        "@vma//:vma",
        "@spirv_reflect//:spirv_reflect",
        "//core:core",
    ],
    visibility = ["//visibility:public"],
)
